# email-newsletter

./: .gitignore  Cargo.toml  Dockerfile  init_db.sh  spec.yaml
.sqlx/: query-56e50a96ed68938cd6a8a4e40be074939b729256a50667f3c9f0aea3d8d6664c.json  query-94929f828a23a6c39b7af190cc78dc0f6c69750886760b3e69a1c944fa3162df.json  query-a6a243ce12f694d761cb36c9591ed417258834f1675767a459482a85a00f5300.json  query-dce0fe18e81451a419146431e44ac9ca5a40b5cc09085856f8f493ff92845e4f.json
configuration/: base.yaml  production.yaml
migrations/: 20231008141029_create_subscriptions_table.sql
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  heath_check.rs
