[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "email_newsletter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
config = "0.15.19"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-actix-web = "0.7.21"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = [
  "registry",
  "env-filter",
] }
uuid = { version = "1.21.0", features = ["v7"] }
unicode-segmentation = "1.12.0"
validator = "0.20.0"


[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]


[dev-dependencies]
fake = { version = "4.4.0", features = ["derive"] }
claims = "0.8.0"
reqwest = "0.13"
random_name_generator = "0.3.6"
once_cell = "1.18.0"
quickcheck = { version = "1.0.3" }
quickcheck_macros = "1.2.0"
rand = "0.10.0"
